# Data-structures-and-algorithm-analysis-in-C

./: README.md  hello.c  test.txt
data-structures/: bak_makefile
data-structures/ch3/: CMakeLists.txt  makefile
data-structures/ch3/include/: common.h  list.h  stack.h  test_list.h  test_stack.h  tree.h
data-structures/ch3/lib/: list.c  stack.c  tree.c
data-structures/ch3/main/: main.c
data-structures/ch3/test/: test_list.c  test_stack.c
data-structures/include/: avl_tree.h  common.h  list.h  queue.h  test_stack.h
data-structures/lib/: avl_tree.c  queue.c  stack.c
